--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,14 +56,33 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/mottoMiruButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#0000ff"
             android:text="...もっと見る"
             android:visibility="invisible"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
+            android:onClick="onClickText"
             android:layout_marginEnd="70dp"
             app:layout_constraintTop_toTopOf="@+id/textView3"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/shukushouButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#0000ff"
+            android:text="縮小表示に戻す"
+            android:visibility="invisible"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:clickable="true"
+            android:onClick="onClickText"
+            android:layout_marginEnd="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
